--- a/new.html
+++ b/new.html
@@ -25,9 +25,9 @@
 
 <div id="slider-container">
   <div id="image-slider">
-    <img src="./1699702291738.jpg" alt="Image 1">
-    <img src="./1700589919603.png" alt="Image 2">
-    <img src="./1702901729947.jpg" alt="Image 3">
+    <img src="https://yt3.googleusercontent.com/vY3uYs71A_JwVcigyd2tVRHwuj05_cYktQSuzRCxta-9VFxHFtKjGrwG9WFi8ijXITBL3CwPQQ=s900-c-k-c0x00ffffff-no-rj" alt="Image 1">
+    <img src="https://lh3.googleusercontent.com/jUoaTIlBn5ibfQcND2n5OMD6Z7xoqNj-ShHlFR6QuLffLXD5pS8V2eNg1rGlrsRrnDkoQ28O8UHzqzBQKAGY4l1CS2NQSq2SkRScK6FOjl82jppyohK-" alt="Image 2">
+    <img src="https://storage.googleapis.com/gweb-uniblog-publish-prod/images/play_10_year-keyword_asset-.max-.width-1000.format-webp.webp" alt="Image 3">
   </div>
 </div>
 
